<resources>
    <string name="app_name">Kaife_cataAPP</string>
    <string name="inicio_de_sesion">Inicio de Sesion</string>
    <string name="correo_electronico">Correo Electronico</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="no_tienes_una_cuenta">¿No tienes una cuenta?,</string>
    <string name="ya_tienes_una_cuenta">¿Ya tienes una cuenta?,</string>
    <string name="registrate">Registrate</string>
    <string name="inicia_sesion">Inicia Sesion</string>
    <string name="contrase_a">Contraseña</string>
    <string name="registro_de_usuario">Registro de usuario</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="fecha_de_nacimiento">Fecha de Nacimiento</string>
    <string name="genero">Genero:</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="registrar_cuenta">Registrar Cuenta</string>
</resources>